tests/diagnostics/naming/casing/function_not_camel_case/expect.txt
# exit: 1
input/main.coppice:1:10: error: function name must be camelCase
  function BadName() -> int64 {
           ^
